src/style.css
:root {
  --timeline_range_background: #f4f1de;
  --timeline_range_break_background: #8d99ae;
  --timeline_range_period: black;
  --timeline_range_period_text: #2b2d42;
  --timeline_range_track: #ff4646;
  --timeline_range_border: #3d405b;

  --timeline_export_marker_start: yellowgreen;
  --timeline_export_marker_end: blue;

  --stats-container-color: rgba(0, 0, 0, 0.2);

  --stats-label-color: #fff;
  --stats-value-color: #fff;
}

video-player {
  overflow: hidden;
}

.video-player {
  display: flex;
  flex-direction: column;

  width: 100%;
}

.video-player__container {
  position: relative;
}

.video-player__video-element {
  width: 100%;
}

.video-player__placeholder-container {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: #2b2d42;
  pointer-events: none;
  display: flex;
  justify-content: center;
  align-items: center;
  container-type: inline-size;
}

.video-player__placeholder-text {
  margin: 0;
  color: white;
  text-align: center;
  font-size: 24px;
}

@container (width > 400px) {
  .video-player__placeholder-text {
    font-size: 36px;
  }
}

.video-player__controls__container {
  display: flex;
  column-gap: 8px;

  order: 1;
}

.video-player__controls__button {
}

.video-player__timeline {
  position: relative;
  bottom: 0;
  left: 0;

  position: relative;
  height: 50px;

  overflow: hidden;
  white-space: nowrap;

  order: 2;
}

.video-player__timeline__range {
  position: absolute;

  height: 50%;
  top: 25%;

  z-index: 0;
}

.video-player__timeline__range[data-range-type="data"] {
  background: var(--timeline_range_background);
}

.video-player__timeline__range[data-range-type="break"] {
  background: var(--timeline_range_break_background);
}

.video-player__timeline__period {
  position: absolute;

  width: 1px;
  height: 50%;

  transform: translateY(50%);

  z-index: 1;

  background: var(--timeline_range_period);
}

.video-player__timeline__period_with_text {
  width: 2px;
}

.video-player__timeline__period__text {
  position: absolute;

  white-space: nowrap;

  bottom: -12px;
  transform: translateX(-50%);

  font-size: 10px;
  color: var(--timeline_range_period_text);
}

.video-player__timeline__track {
  position: absolute;

  width: 2px;
  height: 100%;

  z-index: 1;

  background: var(--timeline_range_track);

  transform: translateX(-50%);
}

.video-player__timeline__export-marker {
  position: absolute;

  height: 100%;
  width: 4px;

  transform: translateX(-50%);

  z-index: 10;
}

.video-player__timeline__export-marker_start {
  background-color: var(--timeline_export_marker_start);
}

.video-player__timeline__export-marker_end {
  background-color: var(--timeline_export_marker_end);
}

.video-player__timeline__track,
.video-player__timeline__range,
.video-player__timeline__period,
.video-player__timeline__export-marker {
  pointer-events: none;
}

.video-player__stats__container {
  position: absolute;

  z-index: 2;

  top: 10px;
  left: 10px;

  background: var(--stats-container-color);
  drop-filter: blur(12px);

  padding: 12px;
}

.video-player__stats__row {
  display: flex;
  column-gap: 8px;
}

.video-player__stats__row__values {
  display: flex;
  column-gap: 4px;
}

.video-player__stats__text {
  font-face: 12px;
}

.video-player__stats__text-label {
  font-weight: 700;
  color: var(--stats-label-color);
}

.video-player__stats__text-value {
  font-weight: 600;
  color: var(--stats-value-color);
}

